--- a/app/views/patients/show.html.haml
+++ b/app/views/patients/show.html.haml
@@ -7,52 +7,10 @@
             = link_to patients_path, class: 'side-link', title: 'Back' do
               = image_tag "arrow-left.png"
             = @patient.name
+.testflow
+  .container
+    = render partial: 'patient_summary', locals: { patient: @patient }
 
-.row
-  .col
-    = react_component "PatientCard", patient: @patient_json, canEdit: @can_edit, showTestLink: true
+    = render partial: 'patient_episode_summary', locals: { encounters: @encounters }
 
-- if @encounters.empty?
-  = empty_data icon: 'icon-outline-test xx-large' do |c|
-    - c.body do
-      %h1 No medical history
-      %p Create test orders in order to start the medical history
-- else
-  .row
-    .col
-      %h1 Medical history
-  .row
-    .col
-      %ul.nav-list
-        - @encounters.each do |encounter|
-          %li{'data-href' => encounter_path(encounter)}
-            .row
-              .col.pe-2
-                %label Date
-              .col
-                .value= format_date(encounter.start_time)
-            .row
-              .col.pe-2
-                %label Diagnose
-              .col
-                .value
-                  - if encounter.diagnostic.blank?
-                    %i Pending
-                  - else
-                    = encounter.human_diagnose
-            .row
-              .col.pe-2
-                %label Comments
-              .col
-                .value
-                  - if encounter.observations.blank?
-                    %i No comments
-                  - else
-                    = encounter.observations
-.row
-  .row.col-6
-    %h3 Episode Summary
-  .row.col-6
-    %ul
-      %li
-        = link_to('Add Episode', new_patient_episode_path(@patient), id: :add_episode)
+    = render partial: 'patient_history', locals: { patient: @patient, can_add_test_orders: !@encounters.empty? }
