--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -1,3 +1,9 @@
+.testorder-status-menu {
+    position: relative;
+    z-index: 9999;
+}
+
+
 .filterbar{
     background:#E5E5E5;
     padding:15px;
