--- a/app/views/encounters/show.html.haml
+++ b/app/views/encounters/show.html.haml
@@ -8,5 +8,5 @@
               = image_tag "arrow-left.png"
             Test Order
 
-= react_component('ChangedEncounterShow', encounter: @encounter_as_json,  requested_tests: @encounter.RequestedTests, requested_by:   @encounter.user !=nil ? @encounter.user.email : '', can_update: @can_update, edit: false, cancel: true, status_types:RequestedTest.statuses)
+= react_component('ChangedEncounterShow', encounter: @encounter_as_json,  requested_tests: @encounter.RequestedTests, requested_by:   @encounter.user !=nil ? @encounter.user.email : '', can_update: @can_update, show_edit: @show_edit_encounter, show_cancel: @show_cancel_encounter, referer: @return_path_encounter, status_types:RequestedTest.statuses)
 
