Show results table only when results available.

--- a/app/views/patients/_form.html.haml
+++ b/app/views/patients/_form.html.haml
@@ -10,7 +10,7 @@
     .col
       .value= f.object.institution
 
-  = react_component 'PatientInputName', fieldValue: @patient.name
+  = react_component 'PatientInputName', fieldValue: @patient.name, patientsSearchUrl: patient_search_index_path
 
   .row
     .col.pe-2
