--- a/app/views/patients/new.html.haml
+++ b/app/views/patients/new.html.haml
@@ -12,4 +12,4 @@
   .col.pe-6
     = render 'form'
   .col.pe-6
-    = react_component 'PatientNameSearchResults', patientsSearchUrl: patient_search_index_path
+    = react_component 'PatientNameSearch'
