--- a/app/views/encounters/new.html.haml
+++ b/app/views/encounters/new.html.haml
@@ -10,4 +10,4 @@
       .col-6
         = link_to('Back', new_index_encounters_path, class: 'button new')
 
-= react_component('EncounterNew', context: @navigation_context.to_hash, patient: @patient_json, mode: params[:mode], possible_assay_results: @possible_assay_results)
+= react_component('EncounterNew', context: @navigation_context.to_hash, patient: @patient_json, mode: params[:mode], possible_assay_results: @possible_assay_results, referer: @return_path_encounter)
