--- a/app/views/encounters/show.html.haml
+++ b/app/views/encounters/show.html.haml
@@ -7,6 +7,4 @@
             = link_to "javascript:history.back();", class: 'side-link', title: 'Back' do
               = image_tag "arrow-left.png"
             Test Order
-
-= react_component('ChangedEncounterShow', encounter: @encounter_as_json,  requested_tests: @encounter.requested_tests, requested_by:   @encounter.user !=nil ? @encounter.user.email : '', can_update: @can_update, show_edit: @show_edit_encounter, show_cancel: @show_cancel_encounter, referer: @return_path_encounter, status_types:RequestedTest.statuses)
-
+= react_component('EncounterShow', encounter: @encounter_as_json,  requested_tests: @encounter.requested_tests, requested_by:   @encounter.user !=nil ? @encounter.user.email : '', can_update: @can_update, show_edit: @show_edit_encounter, show_cancel: @show_cancel_encounter, referer: @return_path_encounter, status_types:RequestedTest.statuses)
