Total tests by device chart.

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -60,7 +60,8 @@
           = image_tag('img/device.png')
           %h3 Total Tests by Device
         .box-content
-          #chartContainer4{:style => "height: 200px; width: 100%;"}
+          #chartTotalTestsDevice{:style => "height: 200px; width: 100%;"}
+            = react_component 'CanvasJsChart', chartDiv: 'chartTotalTestsDevice', chartData: Extras::Charts::Pie.new(@total_tests_by_device).render
 
       .small-8.columns.box
         %header
@@ -68,8 +69,8 @@
           %h3 Average Tests by Technician
         .box-content
           #chartContainer5{:style => "height: 200px; width: 100%;"}
-    %section.row
 
+    %section.row
       .small-12.columns.box
         %header
           = image_tag('img/test-tube.png')
@@ -81,105 +82,5 @@
             No chart information available
 
 
-:javascript
-  setTimeout(function(){
-  var chart = new CanvasJS.Chart("chartContainer4",
-  {
-  animationEnabled: true,
-  data: [
-  {
-  type: "doughnut",
-  startAngle: 60,
-  toolTipContent: "{legendText}: {y} - #percent% ",
-  showInLegend: true,
-  dataPoints: [
-  {y: 65899660, color: "#b5e083",indexLabel: "Barack Obama #percent%", legendText: "Barack Obama" },
-  {y: 60929152, color: "#069ada",indexLabel: "Mitt Romney #percent%", legendText: "Mitt Romney" },
-  {y: 2175850,  color: "#aaaaaa",indexLabel: "Others #percent%", legendText: "Others" }
-  ]
-  }
-  ]
-  });
-  chart.render();
-  },10);
 
-:javascript
-  setTimeout(function(){
-  var chart = new CanvasJS.Chart("chartContainer5",
-  {
-   theme: "theme1",
-  animationEnabled: true,
-  toolTip: {
-  shared: true
-  },
-  axisY: {
-  title: "billion of barrels"
-  },
-  axisY2: {
-  title: "million barrels/day"
-  },
-  data: [
-  {
-  type: "column",
-  color: "#9dce65",
-  name: "Proven Oil Reserves (bn)",
-  legendText: "Proven Oil Reserves",
-  showInLegend: true,
-  color: "#1E97CC",
-  dataPoints:[
-  {label: "Saudi", y: 262},
-  {label: "Venezuela", y: 211},
-  {label: "Canada", y: 175},
-  {label: "Iran", y: 137},
-  {label: "Iraq", y: 115},
-  {label: "Kuwait", y: 104},
-  {label: "UAE", y: 97.8},
-  {label: "Russia", y: 60},
-  {label: "US", y: 23.3},
-  {label: "China", y: 20.4}
-
-
-  ]
-  },
-  {
-  type: "column",
-  color: "#de4843",
-  name: "Oil Production (million/day)",
-  legendText: "Oil Production",
-  axisYType: "secondary",
-  showInLegend: true,
-  color: "#9DCE65",
-  dataPoints:[
-  {label: "Saudi", y: 11.15},
-  {label: "Venezuela", y: 2.5},
-  {label: "Canada", y: 3.6},
-  {label: "Iran", y: 4.2},
-  {label: "Iraq", y: 2.6},
-  {label: "Kuwait", y: 2.7},
-  {label: "UAE", y: 3.1},
-  {label: "Russia", y: 10.23},
-  {label: "US", y: 10.3},
-  {label: "China", y: 4.3}
-
-
-  ]
-  }
-
-  ],
-  legend:{
-  cursor:"pointer",
-  fontSize: 10,
-  itemclick: function(e){
-  if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-  e.dataSeries.visible = false;
-  }
-  else {
-  e.dataSeries.visible = true;
-  }
-  chart.render();
-  }
-  },
-  });
-
-  chart.render();
-  },10);
+  -# setTimeout(function(){},10);
